--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.3)
 project(kvbench)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g")
+
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 set(KVBENCH_LIB protobuf pthread)
